Closed Bug 1709166 Opened 4 years ago Closed 4 years ago

Fix the upload progress notifications for HTTP3

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- wontfix
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(2 files)

No description provided.

Set release status flags based on info from the regressing bug 1689554

Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b0d99b5de62b Fix the upload progress notifications r=necko-reviewers,valentin https://hg.mozilla.org/integration/autoland/rev/5aa424114878 Add test for OnProgress notifications for HTTP/3 r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9219911 [details]
Fix the upload progress notifications

Beta/Release Uplift Approval Request

  • User impact if declined: If a web site has a uploading progress information (e.g. time remaining, or a line being filled), the progress will no be updated.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This only make sure notifications are send when HTTP/3 protocol is used. This code is already exercised by HTTP/2 and HTTP/1.1. code path.
  • String changes made/needed:
Attachment #9219911 - Flags: approval-mozilla-beta?
Attachment #9220294 - Flags: approval-mozilla-beta?

Comment on attachment 9219911 [details]
Fix the upload progress notifications

88 regression, patch has tests and was a few days on nightly with no reported regression, approved for 89 beta 11, thanks.

Attachment #9219911 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9220294 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: