Bug 1709166 - Fix the upload progress notifications r=necko-reviewers,valentin a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D114135